[tool.poetry]
name = "asmr-spider"
version = "0.2.0"
description = "asmr.one 音声下载器"
authors = ["月ヶ瀬"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "asmr_spider" },
]
homepage = "https://github.com/tkgs0/asmr-spider"
repository = "https://github.com/tkgs0/asmr-spider"
keywords = ["ASMR", "ASMR Downloader"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = ">=6.0"
httpx = ">=0.23.0"
loguru = ">=0.6.0"
pydantic = "^2.1.1"
rich = ">=13.0.0"
soundfile = ">=0.12.1"
pydub = ">=0.25.1"

[tool.poetry.dev-dependencies]
python = "^3.9"
PyYAML = ">=6.0"
httpx = ">=0.23.0"
loguru = ">=0.6.0"
pydantic = "^2.1.1"
rich = ">=13.0.0"
ujson = ">=5.2.0"
soundfile = ">=0.12.1"
pydub = ">=0.25.1"

[tool.poetry.scripts]
asmr = "asmr_spider.__main__:main"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

